fix(mobile): UI-Tests: Index Scroll bar - check sizes of side bar [OAPTAU-430]
- Added missing list elements (46-index-scroll-bar.html)
- Fixed styles in order to center index scrollbar (indexscrollbar.less)

--- a/tau/src/css/profile/mobile/changeable/common/indexscrollbar.less
+++ b/tau/src/css/profile/mobile/changeable/common/indexscrollbar.less
@@ -108,6 +108,41 @@
 	& + .ui-listview li {
 		padding-right: 40 * @unit_base;
 	}
+
+	ul li:first-child {
+		padding-top: 42 * @unit_base;
+		position: relative;
+
+		&::before {
+			content: "";
+			height: 40 * @unit_base;
+			width: 40 * @unit_base;
+			position: absolute;
+			top: 0;
+			left: 0;
+			background-color: @color_indexscrollbar_text;
+			mask-image: url("../default/images/controls/core_floating_icon_search.png");
+			mask-size: 80%;
+			mask-position: center center;
+			-webkit-mask-image: url("../default/images/controls/core_floating_icon_search.png");
+			-webkit-mask-size: 80%;
+			-webkit-mask-position: center center;
+		}
+
+		&::after {
+			content: "";
+			height: 2 * @unit_base;
+			width: 40 * @unit_base;
+			position: absolute;
+			top: 40 * @unit_base;
+			left: 0;
+			background-color: @color_indexscrollbar_divider;
+		}
+	}
+
+	ul li:last-child {
+		border-bottom-color: transparent;
+	}
 }
 
 .ui-indexscrollbar-indicator {
